# coppe-wm

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md
configuration/xsessions/: coppe-wm.desktop  jwm.desktop  waswm.desktop
coppe-common/: Cargo.toml
coppe-common/src/: client.rs  encoding.rs  event.rs  key.rs  lib.rs  window.rs
coppe-core/: Cargo.toml
coppe-core/src/: event.rs  ffi.rs  key.rs  lib.rs
coppe-std/: Cargo.toml
coppe-wm/: Cargo.toml
coppe-wm/src/: client.rs  events.rs  layout.rs  main.rs  state.rs  x11.rs
coppe-wm/src/runner/: imports.rs  mod.rs  plug_mgr.rs  sub_mgr.rs
coppe-wm/src/runner/imports/: mod.rs  window.rs
coppe-wm/src/wm/: handler.rs  mod.rs  state.rs
examples/c_minimal/: Makefile  build.sh  plugin.c  wasm-import.syms
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
examples/rust_minimal/: Makefile  plugin.rs
examples/wat_minimal/: Makefile  plugin.wat
libcoppe/c/: wasm-import.syms
libcoppe/rust/coppe-core/: Cargo.toml
libcoppe/rust/coppe-core/src/: command.rs  debug.rs  event.rs  ffi.rs  lib.rs  prelude.rs  (+1 more)
libcoppe/rust/coppe-std/: Cargo.toml
plugins/c_minimal/: Makefile  libcoppe  plugin.c  wasm-import.syms
plugins/rust/: Cargo.toml
plugins/rust/src/: lib.rs
plugins/rust_debug/: Cargo.toml
plugins/rust_debug/src/: lib.rs
plugins/rust_minimal/: plugin.rs
plugins/wat_minimal/: plugin.wat
src/: bindings.rs  config.rs  events.rs  exports.rs  layout.rs  main.rs  runner.rs  state.rs
src/runner/: imports.rs  mod.rs  plug_mgr.rs  sub_mgr.rs
src/wm/: handler.rs  mod.rs
(+6 files in other folders)
