[package]
name = "coppe-wm"
version = "0.0.1"
authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.9"
coppe-common = { path = "../coppe-common", features = [ "std" ] }
log = "0.4"
parking_lot = "0.11.2"
shlex = "1.0"
wasmer = "2.0"
x11rb = "0.9"
